--- a/man5/ldap-notify.5
+++ b/man5/ldap-notify.5
@@ -25,7 +25,7 @@ do not send emails or modify anything in ldap
 \fB\fC\-\-test\fR \fItest\-address\fP
 send all mails to the given address
 .TP
-\fB\fC\-\-restrict\fR \fIDN\fP;\fICN\fP;...*
+\fB\fC\-\-restrict\fR \fIDN\fP;\fICN\fP;...
 restrict notifications to these semicolon separated user DNs or CNs
 .TP
 \fB\fC\-\-time\fR \fItimestamp\fP
