--- a/man5/ldap-notify.5
+++ b/man5/ldap-notify.5
@@ -58,7 +58,7 @@ second_attribute = multi
 .PP
 The multi\-line value is useful for long lists like in the \fB\fCrestrict_to_users\fR value.
 .PP
-The default configuration is the following:
+The default configuration is the following (call \fB\fCldap\-notify\fR with the \fB\fC\-\-print\-conf\fR parameter to print it):
 .PP
 .RS
 .nf
@@ -86,14 +86,14 @@ user =
 password =
 password_base64 =
 [admin]
-from_address = root@*HOSTNAME*
-to_address = admin@*HOSTNAME*
+from_address = root@<HOSTNAME>
+to_address = admin@<HOSTNAME>
 from_text = $Object Expiry Notification
 subject = $Object Expiry Notification Report
-text_template = *LDAP_NOTIFY_DIR*/templates/admin.tmpl.txt
+text_template = <LDAP_NOTIFY_DIR>/templates/admin.tmpl.txt
 [test]
 enabled = false
-to_address = root@*HOSTNAME*
+to_address = root@<HOSTNAME>
 .fi
 .RE
 .PP
@@ -210,7 +210,7 @@ The default values of a 30 day rule:
 from_address = *ADMIN FROM ADRESS*
 from_text = *ADMIN FROM TEXT*
 subject = $Object will expire soon
-text_template = *LDAP_NOTIFY_DIR*/templates/notify.tmpl.txt
+text_template = <LDAP_NOTIFY_DIR>/templates/notify.tmpl.txt
 html_template =
 .fi
 .RE
